@@ -1,7 +1,8 @@
 use strict;
-use Test::More tests => 1;
+use Test::More tests => 2;
 
 BEGIN {
     use_ok 'CGI::Header';
+    use_ok 'CGI::Header::Standalone';
 }
 
